--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AccountFragment"
     android:orientation="vertical">
 
@@ -39,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
+            android:layout_marginBottom="280dp"
             android:layout_marginTop="20dp">
 
             <LinearLayout
@@ -108,5 +110,21 @@
             </LinearLayout>
 
         </LinearLayout>
+
+    <com.ncorti.slidetoact.SlideToActView
+        android:id="@+id/slide_act"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="6dp"
+        app:area_margin="4dp"
+        app:animation_duration="250"
+        app:outer_color="@color/colorGrey"
+        app:inner_color="@color/colorLight"
+        app:border_radius="2dp"
+        app:text="Logout"
+        app:text_size="20sp"
+        app:slider_height="70dp"
+        app:slider_locked="false"
+        app:bounce_on_start="true" />
 
 </LinearLayout>
